--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -160,6 +160,12 @@
     <br>
     <br>
 
+    <footer class="footer">
+      <div class="container">
+          <p><a href="/api/friends">API Friends List</a></p>
+      </div>
+    </footer>
+
     <div id="results-modal" class="modal" tabindex="-1" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
