--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -157,14 +157,14 @@
     <button type="submit" class="btn-primary" id="submit">Submit</button>
     </div>
 
+    <footer class="footer">
+          <p><a href="/api/friends">Friends List</a></p>
+    </footer>
+
     <br>
     <br>
 
-    <footer class="footer">
-      <div class="container">
-          <p><a href="/api/friends">API Friends List</a></p>
-      </div>
-    </footer>
+    
 
     <div id="results-modal" class="modal" tabindex="-1" role="dialog">
       <div class="modal-dialog">
